<package><name>my_bwi</name><version>0.0.0</version><description>The my_bwipackage</description><maintainer email="mkarora@cs.utexas.edu">Maya Kothare-Arora</maintainer><license>BSD</license><buildtool_depend>catkin</buildtool_depend><build_depend>roscpp</build_depend><build_depend>rospy</build_depend><build_depend>std_msgs</build_depend><build_depend>jaco_msgs</build_depend><build_depend>moveit_utils</build_depend><build_depend>moveit_msgs</build_depend><build_depend>segbot_arm_perception</build_depend><build_depend>segbot_arm_manipulation</build_depend><run_depend>roscpp</run_depend><run_depend>rospy</run_depend><run_depend>std_msgs</run_depend><run_depend>jaco_msgs</run_depend><run_depend>segbot_arm_perception</run_depend><export/></package>